kanban-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kanban-app
    group: backend
  name: kanban-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanban-app
  template:
    metadata:
      labels:
        app: kanban-app
        group: backend
    spec:
      containers:
      - image: wkrzywiec/kanban-app:k8s
        name: kanban-app
        ports:
        - containerPort: 8080
        #envFrom:
        #  - configMapRef:
        #      name: postgres-config
        resources:
          requests:
           memory: "256Mi"
           cpu: "300m"
          limits:
            memory: "512Mi"
            cpu: "500m"
