postgres-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-client
spec:
  containers:
  - name: postgres-client
    image: postgres:9.6-alpine
    command: [ "sleep", "infinity" ]
  restartPolicy: Never
