adminer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    #app: adminer 
    group: db
  name: adminer-service
  #namespace: default
spec:
  ports:
  - port: 8080
    #protocol: TCP
    targetPort: 8080
  selector:
    app: adminer
  type: ClusterIP
