kanban-app-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    #app: kanban-app
    group: backend
  name: kanban-app
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: kanban-app
  type: ClusterIP
#status:
#  loadBalancer: {}
