kanban-ui-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kanban-ui
    group: backend
  name: kanban-ui
spec:
  ports:
  - port: 80
    #protocol: TCP
    targetPort: 80
  selector:
    app: kanban-ui
  type: ClusterIP
