postgres-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
    group: db
spec:
  type: ClusterIP
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: postgres
