ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths: 
      #adminer
      - backend:
          service:
            name: adminer-service
            port:
              number: 8080
        path: /admin
        pathType: Prefix
      #frontend
      - backend:
          service:
            name: kanban-ui
            port:
              number: 80
        path: /
        pathType: Prefix
      #backend
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: kanban-app
            port:
              number: 8080
